fix bugs e aggiunto anunci marketplace e pagamenti